firefox scrollbarY fix2

--- a/src/serviceStyle.css
+++ b/src/serviceStyle.css
@@ -31,7 +31,7 @@ input:-webkit-autofill {
   width: 0 !important;
 }
 .noScroll {
-  overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
 }
 
 .heroImg {
